--- a/src/composer.json
+++ b/src/composer.json
@@ -10,9 +10,9 @@
     "slim/slim": "3.*"
   },
 
-  "autoload":{
-		"psr-4": {
-			"wish\\" : "../src"
-		}
-	}
+  "autoload": {
+    "psr-4": {
+      "mywishlist\": "src/"
+    }
+  }
 }
