--- a/web/composer.json
+++ b/web/composer.json
@@ -5,7 +5,7 @@
   "license": "proprietary",
 
   "require": {
-    "illuminate/database": "^5.5.44",
+    "illuminate/database": "^5.5.*",
     "php": ">= 7.0",
     "slim/slim": "3.*"
   },
