--- a/src/conf/db.config.ini
+++ b/src/conf/db.config.ini
@@ -1,6 +1,6 @@
 driver=mysql
 host=localhost
-database=mywishlist
+database=grosio4u@webetu.iutnc.univ-lorraine.fr
 username=phptest
 password=php
 charset=utf8
