--- a/src/conf/db.config.ini
+++ b/src/conf/db.config.ini
@@ -1,7 +1,7 @@
 driver=mysql
 host=localhost
-database=grosio4u@webetu.iutnc.univ-lorraine.fr
-username=phptest
-password=php
+database=grosio4u
+username=grosio4u
+password=sa57sa57
 charset=utf8
 collation=utf8_unicode_ci
